--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "employee-management-system-frontend",
+  "name": "employee-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
